Support MM 3.1 Middleman::Extension class. Begin multi-blog support. test against 3.0 and github master.

--- a/Gemfile-3.1
+++ b/Gemfile-3.1
@@ -1,6 +1,10 @@
 source 'http://rubygems.org'
 
-gem "middleman", "~> 3.0.0"
+git "git://github.com/middleman/middleman.git", :branch => "master" do
+  # gem "middleman"
+  gem "middleman-core"
+  gem "middleman-more"
+end
 
 # Specify your gem's dependencies in middleman-blog.gemspec
 gemspec
@@ -19,3 +23,7 @@ gem "nokogiri"
 platforms :ruby do
   gem "redcarpet", "~> 2.1.1"
 end
+
+
+gem "pry"
+gem "pry-debugger"
