wip default template

--- a/Gemfile-3.1
+++ b/Gemfile-3.1
@@ -1,4 +1,4 @@
-source 'http://rubygems.org'
+source 'https://rubygems.org'
 
 git "git://github.com/middleman/middleman.git", :branch => "master" do
   # gem "middleman"
@@ -23,7 +23,3 @@ gem "nokogiri"
 platforms :ruby do
   gem "redcarpet", "~> 2.1.1"
 end
-
-
-gem "pry"
-gem "pry-debugger"
